@@ -205,10 +205,31 @@ local my_ai = { }
 local ai_stdlib = wesnoth.require('ai/lua/stdlib.lua');
 ai_stdlib.init(ai)
 
-function my_ai:execute()
-       ai.say_hello()
+function my_ai:stage_hello()
+       wesnoth.message('hello from stage!')
+end
+
+function my_ai:candidate_action_evaluation_hello()
+       wesnoth.message('hello from candidate action evaluation!')
+       return 42, {test=123}
+end
+
+function my_ai:candidate_action_execution_hello(cfg)
+       wesnoth.message('hello from candidate action execution!')
+       wesnoth.message('test value is ' .. cfg.test)
        self:do_moves()
 end
+
+function my_ai:candidate_action_evaluation_hello2()
+       wesnoth.message('hello from second candidate action evaluation!')
+       return 99
+end
+
+function my_ai:candidate_action_execution_hello2()
+       wesnoth.message('hello from second candidate action execution!')
+       self:do_moves()
+end
+
 
 function my_ai:do_moves()
        my_leader = wesnoth.get_units({canrecruit = true, side = ai.side})[1]
@@ -238,8 +259,23 @@ return my_ai
 >>
             [/engine]
             [stage]
+                name=testing_ai_default::candidate_action_evaluation_loop
+                [candidate_action]
+                     engine=lua
+                     name=first
+                     evaluation="return (...):candidate_action_evaluation_hello()"
+                     execution="local ai, cfg = ...; ai:candidate_action_execution_hello(cfg)"
+                [/candidate_action]
+                [candidate_action]
+                     engine=lua
+                     name=second
+                     evaluation="return (...):candidate_action_evaluation_hello2()"
+                     execution="(...):candidate_action_execution_hello2()"
+                [/candidate_action]
+            [/stage]
+            [stage]
                 engine="lua"
-                code= "(...):execute()"
+                code= "(...):stage_hello()"
             [/stage]
         [/ai]
     [/side]
